# brisk

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  README.md  acquire-deps.cmake  dep-hash.cmake  format-all.sh  upload-deps.cmake  vcpkg.json
.github/workflows/: docs.yml  test.yml  update-deps.yml
cmake/: Package-README.me.in  add_autotests.cmake  add_license.cmake  brisk.cmake  compile_resources.cmake  config.cmake.in  init.cmake  setup_executable.cmake
cmake/Windows/: icon.cmake  (+1 more)
docs/: Compiler.md  GettingStarted.md  PrebuiltBinaries.md  Readme.md  cxxdox.yml  mkdocs.yml
examples/: CMakeLists.txt  README.md
examples/showcase/: CMakeLists.txt
examples/showcase/resources/: countries.json
examples/showcase/src/: Buttons.cpp  Buttons.hpp  Dialogs.cpp  Dialogs.hpp  Dropdowns.cpp  Dropdowns.hpp  Editors.cpp  Editors.hpp  Layout.cpp  Layout.hpp  Messenger.cpp  Messenger.hpp  ShowcaseComponent.cpp  ShowcaseComponent.hpp  Typography.cpp  Typography.hpp  Visual.cpp  Visual.hpp  showcase.cpp
src/: CMakeLists.txt
src/core/: App.cpp  AutoTestsMain.cpp  AutoreleasePool.mm  Binding.cpp  Binding_test.cpp  Bytes.cpp  Bytes_test.cpp  CMakeLists.txt  COMInit.cpp  Catch2Utils.hpp  Compression.cpp  Compression_Brotli.cpp  Compression_GZip.cpp  Compression_LZ4.cpp  Compression_test.cpp  Cryptography.cpp  Cryptography_Darwin.mm  Cryptography_Linux.cpp  Cryptography_Windows.cpp  Cryptography_test.cpp  Deps.cmake  DynamicLibrary_Darwin.mm  DynamicLibrary_Linux.cpp  DynamicLibrary_Windows.cpp  DynamicLibrary_test.cpp  Embed.cpp  Encoding.cpp  Encoding_test.cpp  Exceptions.cpp  Fixed_test.cpp  Hash.cpp  Hash_test.cpp  IO.cpp  IO_Darwin.mm  IO_Linux.cpp  IO_Windows.cpp  IO_test.cpp  Initialization.cpp  InlineVector_test.cpp  Json.cpp  (+29 more)
src/core/cityhash/: LICENSE.txt  city.cc
src/core/hash/: hash.h  md5.c  private.h  sha1.c  sha256.c  sha3.c  sha512.c
src/core/llvm/: SmallVector.cpp
src/core/test/: HelloWorld.hpp  LoremIpsum.hpp
src/graphics/: Atlas.cpp  Atlas.hpp  CMakeLists.txt  Canvas.cpp  Catch2Utils.hpp  ColorSpace_test.cpp  Color_test.cpp  Deps.cmake  FlatAllocator.hpp  FlatAllocator_test.cpp  Fonts.cpp  Fonts_test.cpp  Geometry_test.cpp  Gradients.cpp  ICU.cpp  Image.cpp  ImageFormats.cpp  ImageFormats_bmp.cpp  ImageFormats_jpeg.cpp  ImageFormats_png.cpp  ImageFormats_test.cpp  ImageFormats_webp.cpp  ImageTransform.cpp  Image_test.cpp  Matrix_test.cpp  Offscreen.cpp  OpenType.cpp  Path.cpp  Pixel_test.cpp  RawCanvas.cpp  RenderState.cpp  Renderer.cpp  Renderer_test.cpp  SVG.cpp  SingleHeaderTest.cpp  VisualTests.hpp
src/graphics/D3D11Renderer/: CMakeLists.txt  Common.cpp  Common.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderEncoder.cpp  RenderEncoder.hpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  fragment.hlsl  vertex.hlsl
src/graphics/WebGPURenderer/: CMakeLists.txt  Common.cpp  Common.hpp  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderDevice_Darwin.mm  RenderDevice_Linux.cpp  RenderDevice_Windows.cpp  RenderEncoder.cpp  RenderEncoder.hpp  WebGPURenderer.cpp  WebGPURenderer.hpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  WindowRenderTarget_Darwin.mm  WindowRenderTarget_Linux.cpp  WindowRenderTarget_Windows.cpp  shader.wgsl
src/graphics/testdata/: 16616460-mono.raw  16616460-rgb.raw  16616460-rgba.raw
src/graphics/vector/: config.h  vdasher.cpp  vline.h  vmatrix.h  vpath.h  vrect.cpp
src/graphics/vector/freetype/: CMakeLists.txt
src/gui/: Animation.cpp  CMakeLists.txt  Catch2Utils.hpp  Component.cpp  Event.cpp  GUI.cpp  GUIApplication.cpp  GUIOffscreen.cpp  GUIWindow.cpp  GUI_test.cpp  Groups.cpp  Layout.cpp  SingleHeaderTest.cpp  Styles.cpp  Styles_test.cpp  WidgetTree.cpp
src/gui/yoga/: CMakeLists.txt  list.cmake
src/gui/yoga/yoga/: Yoga.h
src/gui/yoga/yoga/algorithm/: AbsoluteLayout.cpp  AbsoluteLayout.h  Baseline.cpp  Cache.cpp  Cache.h  CalculateLayout.cpp  CalculateLayout.h  FlexLine.cpp  FlexLine.h  PixelGrid.cpp  PixelGrid.h  SizingMode.h  TrailingPosition.h
src/gui/yoga/yoga/config/: Config.h
src/gui/yoga/yoga/debug/: AssertFatal.cpp  AssertFatal.h  Log.cpp  Log.h
src/gui/yoga/yoga/enums/: Align.h  Dimension.h  Direction.h  Display.h  Edge.h  Errata.h  ExperimentalFeature.h  FlexDirection.h  Gutter.h  Justify.h  LogLevel.h  MeasureMode.h  NodeType.h  Overflow.h  PhysicalEdge.h  PositionType.h  Unit.h  Wrap.h  YogaEnums.h
src/gui/yoga/yoga/node/: LayoutResults.h  Node.cpp  Node.h
src/gui/yoga/yoga/numeric/: Comparison.h
src/gui/yoga/yoga/style/: Style.h  StyleLength.h
src/network/: CMakeLists.txt  Deps.cmake  Fetch.cpp  Network_test.cpp  UserAgent.cpp
src/widgets/: AutoScrollable.cpp  Button.cpp  CMakeLists.txt  Catch2Utils.hpp  CheckBox.cpp  Color.cpp  ComboBox.cpp  ContextPopup.cpp  DialogComponent.cpp  Dot.cpp  Graphene.cpp  Guide.cpp  Hint.cpp  Hyperlink.cpp  ImageView.cpp  Item.cpp  ItemList.cpp  Knob.cpp  Layouts.cpp  Line.cpp  ListBox.cpp  Notifications.cpp  Pages.cpp  Paragraph.cpp  PopupBox.cpp  PopupButton.cpp  PopupDialog.cpp  Progress.cpp  RadioButton.cpp  ScrollBar.cpp  ScrollBox.cpp  Slider.cpp  Spacer.cpp  SpinBox.cpp  Spinner.cpp  Switch.cpp  Table.cpp  Text.cpp  TextEditor.cpp  ToggleButton.cpp  (+3 more)
src/widgets/internal/: _Template.cpp
src/window/: CMakeLists.txt  Catch2Utils.hpp  Clipboard_Darwin.mm  Clipboard_Linux.cpp  Clipboard_Windows.cpp  Cursors.hpp  Deps.cmake  Display_Darwin.mm  Display_Linux.cpp  Display_Windows.cpp  Display_test.cpp  FrameTimePredictor.hpp  GLFWlicense.txt  IcoWriter.cpp  KeyCodes.hpp  KeyCodes_Darwin.mm  KeyCodes_Linux.cpp  KeyCodes_Windows.cpp  OSDialogs_Darwin.mm  OSDialogs_Linux.cpp  OSDialogs_Windows.cpp  PlatformWindow.cpp  PlatformWindow.hpp  PlatformWindow_Darwin.mm  PlatformWindow_Linux.cpp  PlatformWindow_Windows.cpp  SingleHeaderTest.cpp  Types.cpp  Window.cpp  WindowApplication.cpp  Window_test.cpp  X11.hpp  default.manifest
(+186 files in other folders)
